--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,9 @@ dependencies {
 		compile 'com.elytradev.concrete:concrete-' + module + ':' + concrete_version;
 	}
 	
+	shadow 'org.hjson:hjson:1.0.0';
+	compile 'org.hjson:hjson:1.0.0';
+	
 }
 
 group = "com.elytradev"
