--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,12 @@ repositories {
 		url = "modmaven.k-4u.nl"
 	}
 	
+	maven {
+		//CTM + Chisel Maven
+		name = "Tterag's Maven"
+		url = "http://maven.tterrag.com"
+	}
+	
 	ivy {
 		//Resolves baubles. Consider just dropping Baubles in your libs folder or rehosting it
 		name 'endless.blue dependency mirror'
@@ -52,6 +58,8 @@ repositories {
 
 def mc_version='1.12.2';
 def jei_version="4.9.1.175";
+def ctm_version="0.3.0.14"
+def chisel_version="0.2.0.31"
 def concrete_version="0.3.6-SNAPSHOT";
 //def concrete_modules=[]; //For eclipse import
 def concrete_modules=["common","inventory","recipe","network","reflect"];
@@ -78,6 +86,9 @@ dependencies {
 	
 	deobfCompile "mezz.jei:jei_${mc_version}:${jei_version}:api"
 	runtime "mezz.jei:jei_${mc_version}:${jei_version}"
+	
+	deobfCompile "team.chisel.ctm:CTM:MC1.12-${ctm_version}"
+	deobfCompile "team.chisel:Chisel:MC${mc_version}-${chisel_version}"
 
 	for (String module : concrete_modules) {
 		shadow 'com.elytradev.concrete:concrete-' + module + ':' + concrete_version;
@@ -91,7 +102,7 @@ dependencies {
 
 group = "com.elytradev"
 archivesBaseName = "MagicArsenal"
-version = "MC1.12_ver1.1.1"
+version = "MC1.12_ver1.1.2"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
