--- a/build.gradle
+++ b/build.gradle
@@ -87,7 +87,7 @@ dependencies {
 	deobfCompile name: "Baubles", version: "1.12-1.5.2"
 	
 	deobfCompile "mezz.jei:jei_${mc_version}:${jei_version}:api"
-	runtime "mezz.jei:jei_${mc_version}:${jei_version}"
+	deobfCompile "mezz.jei:jei_${mc_version}:${jei_version}"
 	
 	deobfCompile "team.chisel.ctm:CTM:MC1.12-${ctm_version}"
 	deobfCompile "team.chisel:Chisel:MC${mc_version}-${chisel_version}"
